# soroban-seal-coin

./: .gitignore  LICENSE  README.md
contract/: .gitignore  Cargo.toml  Makefile
contract/src/: historical_data.rs  lib.rs  test.rs
exploration/: N_12_extent_v3.0.csv  N_seaice_extent_daily_v3.0.csv  image.ipynb  sea_ice_index.ipynb
iot/: Makefile  epd2in13_V4.py  pyproject.toml  seal_coin_supply.py  sii.py  soroban.py
iot/screen/: epd2in13_V4.py  screen.py
