[build-system]
requires = ["hatchling>=1.14.0"]
build-backend = "hatchling.build"

[project]
name = "Seal Coin"
version = "1.0"
description = "Seal Coin Cryptocurrency"
requires-python = ">=3.9"  # 3.9 because of Raspberry Pi
license = "BSD-3-Clause"
authors = [
    { name = "Pamphile Roy" },
]
maintainers = [
    { name = "Pamphile Roy" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "gpiozero",
    "pigpio; sys_platform == 'darwin'",
    "RPi.GPIO; sys_platform != 'darwin'",
    "spidev; sys_platform != 'darwin'",  # screen
    "pillow",  # screen
    "pandas",  # fetch SII
    "stellar-sdk",  # call Soroban smart contract
]

[project.urls]
homepage = "https://github.com/tupui/soroban-seal-coin"
documentation = "https://github.com/tupui/soroban-seal-coin"
source = "https://github.com/tupui/soroban-seal-coin"
